# mcp-injection-experiments

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
architecture/: api-contracts.md  observable-impact-model.md  security-model.md  target-structure.md
checklists/: demo-safety-checklist.md  deployment-checklist.md
context/: research-notes.md
docs/: agent-traps-mcp-mapping.md  api.md  demo-script.md  deployment.md  expansion-source-notes.md  exploit-catalog-2025-2026.md  migration-plan.md  operations.md  owasp-mcp-coverage.md  security-review.md
experiments/manifests/: remote-agent-traps-approval-fatigue.yaml  remote-agent-traps-hidden-html.yaml  remote-agent-traps-memory-poisoning.yaml  remote-agent-traps-subagent-spawning.yaml  remote-agent-traps-sybil-and-fragments.yaml  remote-ai-clickfix.yaml  remote-auth-confused-deputy.yaml  remote-comment-and-control.yaml  remote-cross-agent-config-priv-esc.yaml  remote-cross-session-context-leak.yaml  remote-direct-poisoning.yaml  remote-filesystem-sandbox-escape.yaml  remote-git-filesystem-chain-safe.yaml  remote-github-issue-leak.yaml  remote-implicit-tool-poisoning.yaml  remote-inspector-proxy-auth-bypass.yaml  remote-mcp-remote-auth-endpoint-injection.yaml  remote-promptware-heartbeat.yaml  (+7 more)
owasp-mapping/: remote-demo-coverage.md
prompts/: 00-baseline-repo-audit.md  01-test-harness-foundation.md  02-safe-sandbox-canaries.md  02b-observable-impact-ledger.md  03-streamable-http-transport.md  04-remote-direct-poisoning.md  05-remote-tool-shadowing.md  06-remote-sleeper-rug-pull.md  07-remote-registry-rug-pull.md  08-remote-cross-session-context-leak.md  09-remote-auth-confused-deputy.md  10-remote-ssrf-metadata-discovery-simulation.md  11-audit-telemetry-dashboard.md  12-remote-sampling-abuse-simulation.md  13-demo-ui-and-docker.md  14-security-hardening-review.md  15-docs-final-polish.md
prompts-followup/: PROMPT_INDEX.md  README.md
sandbox/: README.md  demo-secret.txt
scripts/: audit_agent.py
snippets/: commit-plan.md  example-curl.md  impact-event-examples.md
templates/: example-manifest.yaml  experiment-manifest.schema.json
tests/: conftest.py
(+181 files in other folders)
