[project]
name = "mcp-demo"
version = "0.0.1"
description = "Safe MCP injection experiment online demo (vulnerable/defended modes)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johann-Peter Hartmann" }]
dependencies = [
    "mcp>=1.27.1",
    "pydantic>=2.7,<3",
    "pyyaml>=6,<7",
    # google-genai is required: the server-side gemini-3.1-flash-lite
    # agent IS the demo. The /demo/agent/<id> route imports
    # google.genai unconditionally and the production image must ship
    # with it. The deployment refuses to start unless GEMINI_API_KEY
    # is set (validate_for_public_mode).
    "google-genai>=0.3,<2",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.111,<1",
    "starlette>=0.37,<1",
    "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "asgi-lifespan>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning"]
